@@ -524,6 +524,7 @@
               --add-opens java.base/java.util=ALL-UNNAMED
               --add-opens java.base/java.lang=ALL-UNNAMED
               --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+              --add-opens java.base/java.nio=ALL-UNNAMED
             </argLine>
           </configuration>
         </plugin>
